packages/flutter_wasmit/ios/Classes/frb.h

typedef struct DartCObject DartCObject;
typedef struct DartCObject *WireSyncReturn;
typedef struct wire_WasmitModuleId {
  uint32_t field0;
} wire_WasmitModuleId;
typedef struct wire_WFunc {
  const void *ptr;
} wire_WFunc;
typedef struct wire_Global {
  const void *ptr;
} wire_Global;
typedef struct wire_Memory {
  const void *ptr;
} wire_Memory;
typedef union WasmValKind {
  struct wire_WasmVal_i32 *i32;
  struct wire_WasmVal_i64 *i64;
  struct wire_WasmVal_f32 *f32;
  struct wire_WasmVal_f64 *f64;
  struct wire_WasmVal_v128 *v128;
  struct wire_WasmVal_funcRef *funcRef;
  struct wire_WasmVal_externRef *externRef;
} WasmValKind;
typedef struct wire_WasmVal {
  int32_t tag;
  union WasmValKind *kind;
} wire_WasmVal;
typedef struct wire_list_wasm_val {
  struct wire_WasmVal *ptr;
  int32_t len;
} wire_list_wasm_val;
typedef struct wire_list_value_ty {
  int32_t *ptr;
  int32_t len;
} wire_list_value_ty;
typedef struct wire_MemoryTy {
  bool shared;
  uint32_t minimum;
  uint32_t *maximum;
} wire_MemoryTy;
typedef struct wire_TableArgs {
  uint32_t minimum;
  uint32_t *maximum;
} wire_TableArgs;
void wire_dispose__method__WasmitModuleId(int64_t port_, struct wire_WasmitModuleId *that);
WireSyncReturn wire_call_function_handle_sync__method__WasmitModuleId(struct wire_WasmitModuleId *that,
                                                                      struct wire_WFunc func,
                                                                      struct wire_list_wasm_val *args);
void wire_call_function_handle__method__WasmitModuleId(int64_t port_,
                                                       struct wire_WasmitModuleId *that,
                                                       struct wire_WFunc func,
                                                       struct wire_list_wasm_val *args);
WireSyncReturn wire_get_function_type__method__WasmitModuleId(struct wire_WasmitModuleId *that,
                                                              struct wire_WFunc func);
WireSyncReturn wire_create_function__method__WasmitModuleId(struct wire_WasmitModuleId *that,
                                                            uintptr_t function_pointer,
                                                            uint32_t function_id,
                                                            struct wire_list_value_ty *param_types,
                                                            struct wire_list_value_ty *result_types);
WireSyncReturn wire_create_memory__method__WasmitModuleId(struct wire_WasmitModuleId *that,
                                                          struct wire_MemoryTy *memory_type);
WireSyncReturn wire_create_global__method__WasmitModuleId(struct wire_WasmitModuleId *that,
                                                          struct wire_WasmVal *value,
                                                          bool mutable_);
WireSyncReturn wire_create_table__method__WasmitModuleId(struct wire_WasmitModuleId *that,
                                                         struct wire_WasmVal *value,
                                                         struct wire_TableArgs *table_type);
WireSyncReturn wire_get_global_type__method__WasmitModuleId(struct wire_WasmitModuleId *that,
                                                            struct wire_Global global);
WireSyncReturn wire_get_global_value__method__WasmitModuleId(struct wire_WasmitModuleId *that,
                                                             struct wire_Global global);
WireSyncReturn wire_set_global_value__method__WasmitModuleId(struct wire_WasmitModuleId *that,
                                                             struct wire_Global global,
                                                             struct wire_WasmVal *value);
WireSyncReturn wire_get_memory_type__method__WasmitModuleId(struct wire_WasmitModuleId *that,
                                                            struct wire_Memory memory);
WireSyncReturn wire_get_memory_data__method__WasmitModuleId(struct wire_WasmitModuleId *that,
                                                            struct wire_Memory memory);
WireSyncReturn wire_get_memory_data_pointer__method__WasmitModuleId(struct wire_WasmitModuleId *that,
                                                                    struct wire_Memory memory);
WireSyncReturn wire_read_memory__method__WasmitModuleId(struct wire_WasmitModuleId *that,
                                                        struct wire_Memory memory,
                                                        uintptr_t offset,
                                                        uintptr_t bytes);