packages/wasmit/lib/src/bridge_generated.io.dart


  late final _wire_dispose__method__WasmitModuleIdPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Int64, ffi.Pointer<wire_WasmitModuleId>)>>(
      'wire_dispose__method__WasmitModuleId');
  late final _wire_dispose__method__WasmitModuleId =
      _wire_dispose__method__WasmitModuleIdPtr
          .asFunction<void Function(int, ffi.Pointer<wire_WasmitModuleId>)>();

  WireSyncReturn wire_call_function_handle_sync__method__WasmitModuleId(
    ffi.Pointer<wire_WasmitModuleId> that,
    wire_WFunc func,
    ffi.Pointer<wire_list_wasm_val> args,
  ) {
    return _wire_call_function_handle_sync__method__WasmitModuleId(
      that,
      func,
      args,
    );
  }

  late final _wire_call_function_handle_sync__method__WasmitModuleIdPtr =
      _lookup<
              ffi.NativeFunction<
                  WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>,
                      wire_WFunc, ffi.Pointer<wire_list_wasm_val>)>>(
          'wire_call_function_handle_sync__method__WasmitModuleId');
  late final _wire_call_function_handle_sync__method__WasmitModuleId =
      _wire_call_function_handle_sync__method__WasmitModuleIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>, wire_WFunc,
              ffi.Pointer<wire_list_wasm_val>)>();

  void wire_call_function_handle__method__WasmitModuleId(
    int port_,
    ffi.Pointer<wire_WasmitModuleId> that,
    wire_WFunc func,
    ffi.Pointer<wire_list_wasm_val> args,
  ) {
    return _wire_call_function_handle__method__WasmitModuleId(
      port_,
      that,
      func,
      args,
    );
  }

  late final _wire_call_function_handle__method__WasmitModuleIdPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Int64, ffi.Pointer<wire_WasmitModuleId>,
                  wire_WFunc, ffi.Pointer<wire_list_wasm_val>)>>(
      'wire_call_function_handle__method__WasmitModuleId');
  late final _wire_call_function_handle__method__WasmitModuleId =
      _wire_call_function_handle__method__WasmitModuleIdPtr.asFunction<
          void Function(int, ffi.Pointer<wire_WasmitModuleId>, wire_WFunc,
              ffi.Pointer<wire_list_wasm_val>)>();

  WireSyncReturn wire_get_function_type__method__WasmitModuleId(
    ffi.Pointer<wire_WasmitModuleId> that,
    wire_WFunc func,
  ) {
    return _wire_get_function_type__method__WasmitModuleId(
      that,
      func,
    );
  }

  late final _wire_get_function_type__method__WasmitModuleIdPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>,
              wire_WFunc)>>('wire_get_function_type__method__WasmitModuleId');
  late final _wire_get_function_type__method__WasmitModuleId =
      _wire_get_function_type__method__WasmitModuleIdPtr.asFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmitModuleId>, wire_WFunc)>();

  WireSyncReturn wire_create_function__method__WasmitModuleId(
    ffi.Pointer<wire_WasmitModuleId> that,
    int function_pointer,
    int function_id,
    ffi.Pointer<wire_list_value_ty> param_types,
    ffi.Pointer<wire_list_value_ty> result_types,
  ) {
    return _wire_create_function__method__WasmitModuleId(
      that,
      function_pointer,
      function_id,
      param_types,
      result_types,
    );
  }

  late final _wire_create_function__method__WasmitModuleIdPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(
                  ffi.Pointer<wire_WasmitModuleId>,
                  ffi.UintPtr,
                  ffi.Uint32,
                  ffi.Pointer<wire_list_value_ty>,
                  ffi.Pointer<wire_list_value_ty>)>>(
      'wire_create_function__method__WasmitModuleId');
  late final _wire_create_function__method__WasmitModuleId =
      _wire_create_function__method__WasmitModuleIdPtr.asFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmitModuleId>,
              int,
              int,
              ffi.Pointer<wire_list_value_ty>,
              ffi.Pointer<wire_list_value_ty>)>();

  WireSyncReturn wire_create_memory__method__WasmitModuleId(
    ffi.Pointer<wire_WasmitModuleId> that,
    ffi.Pointer<wire_MemoryTy> memory_type,
  ) {
    return _wire_create_memory__method__WasmitModuleId(
      that,
      memory_type,
    );
  }

  late final _wire_create_memory__method__WasmitModuleIdPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>,
                  ffi.Pointer<wire_MemoryTy>)>>(
      'wire_create_memory__method__WasmitModuleId');
  late final _wire_create_memory__method__WasmitModuleId =
      _wire_create_memory__method__WasmitModuleIdPtr.asFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmitModuleId>, ffi.Pointer<wire_MemoryTy>)>();

  WireSyncReturn wire_create_global__method__WasmitModuleId(
    ffi.Pointer<wire_WasmitModuleId> that,
    ffi.Pointer<wire_WasmVal> value,
    int mutability,
  ) {
    return _wire_create_global__method__WasmitModuleId(
      that,
      value,
      mutability,
    );
  }

  late final _wire_create_global__method__WasmitModuleIdPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmitModuleId>,
              ffi.Pointer<wire_WasmVal>,
              ffi.Int32)>>('wire_create_global__method__WasmitModuleId');
  late final _wire_create_global__method__WasmitModuleId =
      _wire_create_global__method__WasmitModuleIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>,
              ffi.Pointer<wire_WasmVal>, int)>();

  WireSyncReturn wire_create_table__method__WasmitModuleId(
    ffi.Pointer<wire_WasmitModuleId> that,
    ffi.Pointer<wire_WasmVal> value,
    ffi.Pointer<wire_TableArgs> table_type,
  ) {
    return _wire_create_table__method__WasmitModuleId(
      that,
      value,
      table_type,
    );
  }

  late final _wire_create_table__method__WasmitModuleIdPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>,
                  ffi.Pointer<wire_WasmVal>, ffi.Pointer<wire_TableArgs>)>>(
      'wire_create_table__method__WasmitModuleId');
  late final _wire_create_table__method__WasmitModuleId =
      _wire_create_table__method__WasmitModuleIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>,
              ffi.Pointer<wire_WasmVal>, ffi.Pointer<wire_TableArgs>)>();

  WireSyncReturn wire_get_global_type__method__WasmitModuleId(
    ffi.Pointer<wire_WasmitModuleId> that,
    wire_Global global,
  ) {
    return _wire_get_global_type__method__WasmitModuleId(
      that,
      global,
    );
  }

  late final _wire_get_global_type__method__WasmitModuleIdPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>,
              wire_Global)>>('wire_get_global_type__method__WasmitModuleId');
  late final _wire_get_global_type__method__WasmitModuleId =
      _wire_get_global_type__method__WasmitModuleIdPtr.asFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmitModuleId>, wire_Global)>();

  WireSyncReturn wire_get_global_value__method__WasmitModuleId(
    ffi.Pointer<wire_WasmitModuleId> that,
    wire_Global global,
  ) {
    return _wire_get_global_value__method__WasmitModuleId(
      that,
      global,
    );
  }

  late final _wire_get_global_value__method__WasmitModuleIdPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>,
              wire_Global)>>('wire_get_global_value__method__WasmitModuleId');
  late final _wire_get_global_value__method__WasmitModuleId =
      _wire_get_global_value__method__WasmitModuleIdPtr.asFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmitModuleId>, wire_Global)>();

  WireSyncReturn wire_set_global_value__method__WasmitModuleId(
    ffi.Pointer<wire_WasmitModuleId> that,
    wire_Global global,
    ffi.Pointer<wire_WasmVal> value,
  ) {
    return _wire_set_global_value__method__WasmitModuleId(
      that,
      global,
      value,
    );
  }

  late final _wire_set_global_value__method__WasmitModuleIdPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>,
                  wire_Global, ffi.Pointer<wire_WasmVal>)>>(
      'wire_set_global_value__method__WasmitModuleId');
  late final _wire_set_global_value__method__WasmitModuleId =
      _wire_set_global_value__method__WasmitModuleIdPtr.asFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>, wire_Global,
              ffi.Pointer<wire_WasmVal>)>();

  WireSyncReturn wire_get_memory_type__method__WasmitModuleId(
    ffi.Pointer<wire_WasmitModuleId> that,
    wire_Memory memory,
  ) {
    return _wire_get_memory_type__method__WasmitModuleId(
      that,
      memory,
    );
  }

  late final _wire_get_memory_type__method__WasmitModuleIdPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>,
              wire_Memory)>>('wire_get_memory_type__method__WasmitModuleId');
  late final _wire_get_memory_type__method__WasmitModuleId =
      _wire_get_memory_type__method__WasmitModuleIdPtr.asFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmitModuleId>, wire_Memory)>();

  WireSyncReturn wire_get_memory_data__method__WasmitModuleId(
    ffi.Pointer<wire_WasmitModuleId> that,
    wire_Memory memory,
  ) {
    return _wire_get_memory_data__method__WasmitModuleId(
      that,
      memory,
    );
  }

  late final _wire_get_memory_data__method__WasmitModuleIdPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(ffi.Pointer<wire_WasmitModuleId>,
              wire_Memory)>>('wire_get_memory_data__method__WasmitModuleId');
  late final _wire_get_memory_data__method__WasmitModuleId =
      _wire_get_memory_data__method__WasmitModuleIdPtr.asFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmitModuleId>, wire_Memory)>();

  WireSyncReturn wire_get_memory_data_pointer__method__WasmitModuleId(
    ffi.Pointer<wire_WasmitModuleId> that,
    wire_Memory memory,
  ) {
    return _wire_get_memory_data_pointer__method__WasmitModuleId(
      that,
      memory,
    );
  }

  late final _wire_get_memory_data_pointer__method__WasmitModuleIdPtr = _lookup<
          ffi.NativeFunction<
              WireSyncReturn Function(
                  ffi.Pointer<wire_WasmitModuleId>, wire_Memory)>>(
      'wire_get_memory_data_pointer__method__WasmitModuleId');
  late final _wire_get_memory_data_pointer__method__WasmitModuleId =
      _wire_get_memory_data_pointer__method__WasmitModuleIdPtr.asFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmitModuleId>, wire_Memory)>();

  WireSyncReturn wire_read_memory__method__WasmitModuleId(
    ffi.Pointer<wire_WasmitModuleId> that,
    wire_Memory memory,
    int offset,
    int bytes,
  ) {
    return _wire_read_memory__method__WasmitModuleId(
      that,
      memory,
      offset,
      bytes,
    );
  }

  late final _wire_read_memory__method__WasmitModuleIdPtr = _lookup<
      ffi.NativeFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmitModuleId>,
              wire_Memory,
              ffi.UintPtr,
              ffi.UintPtr)>>('wire_read_memory__method__WasmitModuleId');
  late final _wire_read_memory__method__WasmitModuleId =
      _wire_read_memory__method__WasmitModuleIdPtr.asFunction<
          WireSyncReturn Function(
              ffi.Pointer<wire_WasmitModuleId>, wire_Memory, int, int)>();
